--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -158,14 +158,21 @@
                 <div>
                     <select id="omr10" name="omr10"
                         class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option value="0" selected>--</option>
-                        <option value="11" class="t_institution_type_option_11"></option>
-                        <option value="12" class="t_institution_type_option_12"></option>
-                        <option value="13" class="t_institution_type_option_13"></option>
-                        <option value="14" class="t_institution_type_option_14"></option>
-                        <option value="15" class="t_institution_type_option_15"></option>
-                        <option value="16" class="t_institution_type_option_16"></option>
-                        <option value="17" class="t_institution_type_option_17"></option>
+                        <option value="-9" class="t_choose">--- choose ---</option>
+                        <option value="1">1. I тип - школы-интернаты для глухих детей.</option>
+                        <option value="2">2. Тип II - школы-интернаты для слабослышащих и тех, кто впоследствии потеряет
+                            слух.</option>
+                        <option value="3">3. III тип - специализированные школы-интернаты для слепых детей &quot;Нурли
+                            Маскан&quot;.</option>
+                        <option value="4">4. IV тип - специализированные школы-интернаты &quot;Нурли Маскан&quot; для
+                            слабовидящих и тех, кто впоследствии потеряет зрение.</option>
+                        <option value="5">5. V тип - школы-интернаты для детей с тяжелыми нарушениями речи.</option>
+                        <option value="6">6. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного
+                            аппарата.</option>
+                        <option value="7">7. Тип VII - школы-интернаты для детей с задержкой психического развития.
+                        </option>
+                        <option value="8">8. Тип VIII - поддержка школ-интернатов для детей с задержкой
+                            интеллектуального развития.</option>
                     </select>
                 </div>
             </div>
@@ -265,7 +272,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>LK14d. Settlement</div>
+                <div>LK14d. Населённый пункт</div>
                 <div>
                     <select id="lk14d" name="lk14d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -469,7 +476,7 @@
 
             <p class="mt-10">SA3. Где проживал ребенок до поступления в интернат?</p>
             <div class="grid grid-cols-2 items-center gap-4 mt-4">
-                <div>Заполните 10-значный код административно-территориальной единицы (МҲОБТ).. SA3a</div>
+                <div>SA3a. Область</div>
                 <div>
                     <select id="sa3a" name="sa3a"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -872,7 +879,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM3d. Settlement</div>
+                <div>CM3d. Населённый пункт</div>
                 <div>
                     <select id="cm3d" name="cm3d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -945,7 +952,7 @@
                     <div class="flex items-center">
                         <input id="cm5b-7" type="radio" value="7" name="cm5b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm5b-7" class="ms-2 text-sm text-gray-900">7. Живет отдельно**</label>
+                        <label for="cm5b-7" class="ms-2 text-sm text-gray-900">7. Живет отдельно*</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm5b-8" type="radio" value="8" name="cm5b"
@@ -1048,25 +1055,25 @@
                     <div class="flex items-center">
                         <input id="cm7b-4" type="radio" value="3" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
+                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее специальное
                             образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-5" type="radio" value="4" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее специальное
-                            образование </label>
+                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-6" type="radio" value="5" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-7" type="radio" value="6" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-9" type="radio" value="9" name="cm7b"
@@ -1261,7 +1268,7 @@
                 </div>
             </div>
 
-            <p class="mt-10">СМ11 Текущее место жительства матери</p>
+            <p class="mt-10">СМ11. Текущее место жительства матери</p>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
                     а. Проживает ли она...? </div>
@@ -1308,7 +1315,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Settlement</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="cm11e" name="cm11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1321,14 +1328,14 @@
             <input type="hidden" id="cm11f" name="cm11f" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>g. Адрес::</div>
+                <div>g. Адрес:</div>
                 <div>
                     <input type="text" id="cm11g" name="cm11g"
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>h. Номер телефона::</div>
+                <div>h. Номер телефона:</div>
                 <div>
                     <input type="text" id="cm11h" name="cm11h"
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
@@ -1562,7 +1569,7 @@
                         <input id="ct6b-2" type="radio" value="1" name="ct6b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="ct6b-2" class="ms-2 text-sm text-gray-900">1. У отца диагностировано текущее
-                            заболевание (например, туберкулез))</label>
+                            заболевание (например, туберкулез)</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct6b-3" type="radio" value="2" name="ct6b"
@@ -1638,25 +1645,25 @@
                     <div class="flex items-center">
                         <input id="ct7b-4" type="radio" value="3" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное
                             образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-5" type="radio" value="4" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное специальное
+                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
                             образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-6" type="radio" value="5" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-7" type="radio" value="6" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-9" type="radio" value="9" name="ct7b"
@@ -1898,7 +1905,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>Settlement</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="ct11e" name="ct11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2243,25 +2250,25 @@
                     <div class="flex items-center">
                         <input id="cg7b-4" type="radio" value="3" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
+                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее специальное
                             образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-5" type="radio" value="4" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее специальное
+                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
                             образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-6" type="radio" value="5" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-7" type="radio" value="6" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-9" type="radio" value="9" name="cg7b"
@@ -2498,7 +2505,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>Settlement</div>
+                <div>e. Населённый пункт</div>
                 <div>
                     <select id="cg11e" name="cg11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3552,7 +3559,7 @@
                         <tr>
                             <td>
                                 <input id="predif7_cb" type="checkbox" value="1" name="predif7_cb"
-                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                                    class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             </td>
                             <td>
                                 <input type="text" id="predif7_other" name="predif7_other"
@@ -3866,8 +3873,9 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
-                    SCH2. В каком классе сейчас учится ребенок? <small class="block italic mt-2">ЗАПОЛНИТЕ, ЕСЛИ
-                        КЛАСС&gt;=8, ЛИБО ПЕРЕХОДИТЕ К CEDU</small>
+                    SCH2. В каком классе сейчас учится ребенок? <small class="block italic mt-2">ПОСТАВЬТЕ 0 ( НОЛЬ) ДЛЯ
+                        ПОДГОТОВИТЕЛЬНОЙ ГРУППЫ</small>
+                    <small class="block italic mt-2">ЗАПОЛНИТЕ, ЕСЛИ КЛАСС&gt;=8, ЛИБО ПЕРЕХОДИТЕ К CEDU</small>
                 </div>
                 <div>
                     <input type="text" id="sch2" name="sch2"
@@ -5569,7 +5577,7 @@
                         <tr>
                             <td>
                                 <input id="todif7_cb" type="checkbox" value="1" name="todif7_cb"
-                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                                    class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             </td>
                             <td>
                                 <input type="text" id="todif7_other" name="todif7_other"
@@ -6907,7 +6915,6 @@
                 </div>
             </div>
         </form>
-
         <footer id="footer" class="fixed bottom-0 w-full h-12 bg-slate-200 shadow">
             <div class="flex justify-center h-full items-center">
 
