--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -163,14 +163,21 @@
                 <div>
                     <select id="omr10" name="omr10"
                         class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option value="0" selected>--</option>
-                        <option value="11" class="t_institution_type_option_11"></option>
-                        <option value="12" class="t_institution_type_option_12"></option>
-                        <option value="13" class="t_institution_type_option_13"></option>
-                        <option value="14" class="t_institution_type_option_14"></option>
-                        <option value="15" class="t_institution_type_option_15"></option>
-                        <option value="16" class="t_institution_type_option_16"></option>
-                        <option value="17" class="t_institution_type_option_17"></option>
+                        <option value="-9" class="t_choose">--- choose ---</option>
+                        <option value="1">1. I tur - kar bolalar uchun internatlar.</option>
+                        <option value="2">2. II tur - eshitish qobiliyati zaif va kelgusida eshitish qobiliyatini
+                            yo&#39;qotadiganlar uchun internatlar.</option>
+                        <option value="3">3. III tur - &quot;Nurli maskan&quot; ko&#39;zi ojiz bolalar uchun
+                            ixtisoslashtirilgan maktab-internatlari.</option>
+                        <option value="4">4. IV tur - ko&#39;zi ojiz va keyinchalik ko&#39;rish qobiliyatini
+                            yo&#39;qotadiganlar uchun &quot;Noorli maskan&quot; ixtisoslashtirilgan maktab-internatlari.
+                        </option>
+                        <option value="5">5. V tur - og&#39;ir nutq buzilishi bo&#39;lgan bolalar uchun internatlar.
+                        </option>
+                        <option value="6">6. VI tur - tayanch-harakat apparati nuqsonlari bo&#39;lgan bolalar uchun
+                            internatlar.</option>
+                        <option value="7">7. VII tur - aqli zaif bolalar maktab-internatlari.</option>
+                        <option value="8">8. VIII tur - aqli zaif bolalar maktab-internatlarini qo&#39;llash.</option>
                     </select>
                 </div>
             </div>
@@ -270,7 +277,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>LK14d. Settlement</div>
+                <div>LK14d. Aholi punkti</div>
                 <div>
                     <select id="lk14d" name="lk14d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -479,7 +486,7 @@
 
             <p class="mt-10">SA3. Bola maktab-internatga qabul qilinishidan oldin qayerda yashagan?</p>
             <div class="grid grid-cols-2 items-center gap-4 mt-4">
-                <div>Maʼmuriy-hududiy birlikning 10 raqamli kodini (MHOBT) kiriting.. SA3a</div>
+                <div>SA3a. Viloyat</div>
                 <div>
                     <select id="sa3a" name="sa3a"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -890,7 +897,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>CM3d. Settlement</div>
+                <div>CM3d. Aholi punkti</div>
                 <div>
                     <select id="cm3d" name="cm3d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -963,7 +970,7 @@
                     <div class="flex items-center">
                         <input id="cm5b-7" type="radio" value="7" name="cm5b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm5b-7" class="ms-2 text-sm text-gray-900">7. Alohida yashaydi**</label>
+                        <label for="cm5b-7" class="ms-2 text-sm text-gray-900">7. Alohida yashaydi*</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm5b-8" type="radio" value="8" name="cm5b"
@@ -1070,24 +1077,25 @@
                     <div class="flex items-center">
                         <input id="cm7b-4" type="radio" value="3" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
+                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta maxsus
                             ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-5" type="radio" value="4" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4.Tugallanmagan o&#39;rta maxsus
+                        <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
                             ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-6" type="radio" value="5" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Oliy ma&#39;lumotli</label>
+                        <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy
+                            ma&#39;lumot</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-7" type="radio" value="6" name="cm7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6.Tugallanmagan oliy ma&#39;lumot</label>
+                        <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Oliy ma&#39;lumotli</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm7b-9" type="radio" value="9" name="cm7b"
@@ -1287,7 +1295,7 @@
                 </div>
             </div>
 
-            <p class="mt-10">CM11 Onaning hozirgi yashash joyi</p>
+            <p class="mt-10">CM11. Onaning hozirgi yashash joyi</p>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
                     a. Hozirda u qayerda yashaydi? </div>
@@ -1311,7 +1319,7 @@
             </div>
 
 
-            <p class="mt-6">b. Ro&#39;yxatdan o&#39;tgan turar joyi manzili - shahar/qishloq:</p>
+            <p class="mt-6">b. Ro&#39;yxatdan o&#39;tgan turar joyi manzili:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>c. Viloyat:</div>
@@ -1334,7 +1342,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>e. Settlement</div>
+                <div>e. Aholi punkti</div>
                 <div>
                     <select id="cm11e" name="cm11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -1347,14 +1355,14 @@
             <input type="hidden" id="cm11f" name="cm11f" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>g. Manzil::</div>
+                <div>g. Manzil:</div>
                 <div>
                     <input type="text" id="cm11g" name="cm11g"
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>h. Telefon raqami::</div>
+                <div>h. Telefon raqami:</div>
                 <div>
                     <input type="text" id="cm11h" name="cm11h"
                         class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
@@ -1595,7 +1603,7 @@
                         <input id="ct6b-2" type="radio" value="1" name="ct6b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="ct6b-2" class="ms-2 text-sm text-gray-900">1. Otaga joriy kasallik (masalan, sil)
-                            tashxisi qo&#39;yilgan)</label>
+                            tashxisi qo&#39;yilgan</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct6b-3" type="radio" value="2" name="ct6b"
@@ -1672,24 +1680,24 @@
                     <div class="flex items-center">
                         <input id="ct7b-4" type="radio" value="3" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;limi</label>
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta maxsus</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-5" type="radio" value="4" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan o&#39;rta maxsus</label>
+                        <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-6" type="radio" value="5" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Oliy ma&#39;lumotli</label>
+                        <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy
+                            ma&#39;lumot</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-7" type="radio" value="6" name="ct7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy
-                            ma&#39;lumot</label>
+                        <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Oliy ma&#39;lumotli</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ct7b-9" type="radio" value="9" name="ct7b"
@@ -1913,7 +1921,7 @@
             </div>
 
 
-            <p class="mt-6">b. Ro&#39;yxatdan o&#39;tgan turar joyi manzili - shahar/qishloq:</p>
+            <p class="mt-6">b. Ro&#39;yxatdan o&#39;tgan turar joyi manzili:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>c. Viloyat:</div>
@@ -1936,7 +1944,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>Settlement</div>
+                <div>e. Aholi punkti</div>
                 <div>
                     <select id="ct11e" name="ct11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -2286,25 +2294,25 @@
                     <div class="flex items-center">
                         <input id="cg7b-4" type="radio" value="3" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
+                        <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o&#39;rta maxsus
                             ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-5" type="radio" value="4" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4.Tugallanmagan o&#39;rta maxsus
+                        <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
                             ta&#39;limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-6" type="radio" value="5" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Oliy ma&#39;lumotli</label>
+                        <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy
+                            ma&#39;lumot</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-7" type="radio" value="6" name="cg7b"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy
-                            ma&#39;lumot</label>
+                        <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Oliy ma&#39;lumotli</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cg7b-9" type="radio" value="9" name="cg7b"
@@ -2523,7 +2531,7 @@
             </div>
 
 
-            <p class="mt-6">b. Ro&#39;yxatdan o&#39;tgan turar joyi manzili - shahar/qishloq:</p>
+            <p class="mt-6">b. Ro&#39;yxatdan o&#39;tgan turar joyi manzili:</p>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
                 <div>c. Viloyat:</div>
@@ -2546,7 +2554,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>Settlement</div>
+                <div>e. Aholi punkti</div>
                 <div>
                     <select id="cg11e" name="cg11e"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -3610,12 +3618,11 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="flex flex-col gap-4">
                     7. Boshqa: Bolada yuqorida sanab o&#39;tilmagan boshqa sohalarda muammolar kuzatildi. Yozib
-                    ko&#39;rsatilsin: …
-                    <table border="0">
+                    ko&#39;rsatilsin: … <table border="0">
                         <tr>
                             <td>
                                 <input id="predif7_cb" type="checkbox" value="1" name="predif7_cb"
-                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                                    class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             </td>
                             <td>
                                 <input type="text" id="predif7_other" name="predif7_other"
@@ -3931,8 +3938,10 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>
-                    SCH2. Hozirda bola qaysi sinfda o&#39;qiydi? <small class="block italic mt-2">AGAR &gt;=8 SINF
-                        BO&#39;LSA TO&#39;LDIRING, AKS HOLATDA CEDUga O&#39;TILSIN</small>
+                    SCH2. Hozirda bola qaysi sinfda o&#39;qiydi? <small class="block italic mt-2">TAYYORLOV GURUHI UCHUN
+                        0 ( NOL) QO&#39;YING</small>
+                    <small class="block italic mt-2">AGAR &gt;=8 SINF BO&#39;LSA TO&#39;LDIRING, AKS HOLATDA CEDUga
+                        O&#39;TILSIN</small>
                 </div>
                 <div>
                     <input type="text" id="sch2" name="sch2"
@@ -5650,12 +5659,11 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="ml-4 flex flex-col gap-4">
                     7. Boshqalar: Bolada yuqorida sanab o&#39;tilmagan boshqa sohalarda muammo bor edi. Iltimos, aniqlik
-                    kiriting: …
-                    <table border="0">
+                    kiriting: … <table border="0">
                         <tr>
                             <td>
                                 <input id="todif7_cb" type="checkbox" value="1" name="todif7_cb"
-                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                                    class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             </td>
                             <td>
                                 <input type="text" id="todif7_other" name="todif7_other"
@@ -6979,7 +6987,7 @@
                         <input id="sq12a-3" type="radio" value="3" name="sq12a"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="sq12a-3" class="ms-2 text-sm text-gray-900">3. Boshqa javob bo&#39;lsa, yozib
-                            ko&#39;rsatilsin: …</label>
+                            ko&#39;rsatilsin:</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="sq12a_other" name="sq12a_other"
