actualizat traducere instrument 1

--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -4197,8 +4197,8 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
 
                 <div>
-                    2b. Bola qaysi sinfda edi? <small class="mb-1 block italic text-red-500">Fill in 0 (zero) for
-                        preparatory class</small>
+                    2b. Bola qaysi sinfda edi? <small class="mb-1 block italic text-red-500">TAYYORLOV GURUHI UCHUN 0 (
+                        NOL) QO'YING</small>
                 </div>
                 <div>
                     <input type="text" id="qeduc2b" name="qeduc2b"
