--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -4137,8 +4137,8 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
 
                 <div>
-                    2б. В каком классе учился ребенок? <small class="mb-1 block italic text-red-500">Fill in 0 (zero)
-                        for preparatory class</small>
+                    2б. В каком классе учился ребенок? <small class="mb-1 block italic text-red-500">ПОСТАВЬТЕ 0 ( НОЛЬ)
+                        ДЛЯ ПОДГОТОВИТЕЛЬНОЙ ГРУППЫ</small>
                 </div>
                 <div>
                     <input type="text" id="qeduc2b" name="qeduc2b"
